tests/rosetta/out/Smalltalk/99-bottles-of-beer-2.out
/tmp/99-bottles-of-beer-2.st:7: parse error, expected ']'
